# rpi-serial-example

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  build.sh  defs.h  main.c
